Revert "fix: tuf ui logout button alignement"
This reverts commit 73d869bc766a467f6cdd59de9ce13b2a86c4eba7.

--- a/release/src/router/www/sysdep/FUNCTION/TUF_UI/form_style.css
+++ b/release/src/router/www/sysdep/FUNCTION/TUF_UI/form_style.css
@@ -1631,12 +1631,13 @@ padding-top:1px;
 
 /* 設置主選單dt */
 .navigation li dt {
-	background:url('/images/New_ui/dropdown_bt.png');
+	background:url('/images/New_ui/dropdown_bt.png') no-repeat;
 	padding:8px 8px 0 0;
 	text-align:center;
 	font-size: 13px;
-	height: 27px;
-	width: 145px;
+	height: 34px;
+	overflow:hidden;
+	width: 152px;
 }
 
 .navigation li dt:hover{
